Fix full record spacing and button order

--- a/static/css/cdrui_styles.css
+++ b/static/css/cdrui_styles.css
@@ -105,6 +105,7 @@
 	height: 64px;
 	opacity: 0;
 	transition: opacity 0.3s;
+	margin-top: -5px;
 }
 
 .thumbnail.thumbnail-size-large .thumbnail-placeholder {
