--- a/static/css/sass/cdr-ui.scss
+++ b/static/css/sass/cdr-ui.scss
@@ -354,7 +354,6 @@ p.spacing {
 
 .bottomline {
   display: inline-flex;
-  padding-top: 20px;
 
   p {
     font-size: 20px;
@@ -442,7 +441,7 @@ p.no-search-results {
   box-shadow: inset 0 10px 5px -5px rgba(0, 0, 0, .5);
   color: #3D4D5B;
   margin: 0;
-  padding-top: .75rem;
+  padding: .75rem;
 
   h2 {
     font-size: 36px;
@@ -575,7 +574,7 @@ p.no-search-results {
 }
 
 .collection-info-bottom {
-  padding: 5px;
+  padding: 0 5px 5px 5px;
   margin: -12px 0 0 0;
 }
 
@@ -634,8 +633,14 @@ p.no-search-results {
   h2 {
     font-size: 2.5rem;
     line-height: 1;
-    margin: 0 20px 20px 25px;
+    margin: 0 20px 20px 0;
     padding-left: 0;
+  }
+
+  #is-admin-unit, #is-collection {
+    h2 {
+      margin-left: 25px;
+    }
   }
 
   h2.link-list {
@@ -646,12 +651,8 @@ p.no-search-results {
 
   .browse-header {
     h2.item-title {
-      padding-left: 25px;
+      padding-left: 15px;
     }
-  }
-
-  .current_item {
-    margin-left: 35px;
   }
 
   .relateditem {
@@ -667,7 +668,6 @@ p.no-search-results {
 
 .item-title {
   font-size: 36px;
-  padding-left: 25px;
 }
 
 .item-actions {
@@ -693,6 +693,10 @@ p.no-search-results {
   .action-btn {
     padding-right: 50px;
   }
+
+  .bottomline {
+    padding: .75rem;
+  }
 }
 
 .full_record {
@@ -715,7 +719,7 @@ p.no-search-results {
   border-radius: 5px;
   font-size: 18px;
   line-height: 1.2;
-  margin: 0 20px 25px 20px;
+  margin: 0 auto 25px auto;
   padding: 20px;
   text-indent: 0;
   width: 100%;
@@ -803,10 +807,18 @@ table.dataTable {
 }
 
 .columns-resize {
-  padding-left: 50px;
+  padding-left: 25px;
 
   .is-10 {
     padding-left: 25px;
+  }
+}
+
+.aggregate-info {
+  padding-left: 0;
+
+  .thumbnail-preview {
+    padding-left: 15px;
   }
 }
 
@@ -889,6 +901,10 @@ table.dataTable {
     }
   }
 
+  #is-admin-unit.browse-header, #is-collection.browse-header {
+    display: flex;
+  }
+
   .actionlink.right {
     float: left;
   }
@@ -918,8 +934,14 @@ table.dataTable {
   }
 
   .action-btn {
-    padding-left: 55px;
+    padding-left: 40px;
     padding-top: 0;
+  }
+
+  .aggregate-record.browse-header {
+    .action-btn {
+      padding-left: 30px;
+    }
   }
 
   .dataTables_wrapper {
@@ -927,6 +949,7 @@ table.dataTable {
       float: left !important;
 
       input {
+        margin-left: 0 !important;
         margin-top: 25px;
         float: left;
       }
@@ -954,12 +977,18 @@ table.dataTable {
 
   .file_record {
     .columns-resize {
+
       .is-10 {
         ul {
           margin-top: 0;
         }
       }
     }
+  }
+
+  .relateditem {
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   .iteminfo {
@@ -970,10 +999,6 @@ table.dataTable {
   .file-info {
     float: none;
     width: 100%;
-
-    div {
-      width: 80px;
-    }
 
     p, .actionlink, .right {
       float: none;
